fixed h1 collapsing

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ li {
   flex-direction: column;
   justify-content: center;
   height: 100%;
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 /* Cursor */
